--- a/FAQ.HTML
+++ b/FAQ.HTML
@@ -4,8 +4,64 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FAQs – Tutor Brian</title>
-  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9fafb;
+      color: #2c2c2c;
+    }
+
+    /* Navigation bar */
+    nav {
+      background: white;
+      border-bottom: 1px solid #ddd;
+      padding: 0.75rem 2rem;
+      display: flex;
+      justify-content: center;
+      gap: 2.5rem;
+      font-weight: 600;
+    }
+    nav a {
+      text-decoration: none;
+      color: #4f46e5;
+      font-size: 1rem;
+      transition: color 0.3s ease;
+    }
+    nav a:hover,
+    nav a.active {
+      color: #3730a3;
+      text-decoration: underline;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 2rem auto 4rem;
+      padding: 0 1.5rem;
+    }
+
+    h2 {
+      font-weight: 600;
+      font-size: 1.8rem;
+      margin-bottom: 0.5rem;
+      color: #4f46e5;
+    }
+
+    .faq-intro {
+      font-size: 1rem;
+      margin-bottom: 2rem;
+      color: #555;
+    }
+
+    .faq-container {
+      /* existing styles can stay here */
+    }
+
+    /* FAQ toggling script styles and other FAQ styles unchanged */
+
+  </style>
   <script defer>
     function toggleTheme() {
       const html = document.documentElement;
@@ -28,16 +84,13 @@
 </head>
 <body>
 
+  <!-- Navigation -->
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="resources.html">Resources</a></li>
-      <li><a href="faq.html" class="active">FAQ</a></li>
-    </ul>
-    <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="faq.html" class="active">FAQ</a>
   </nav>
 
   <main>
@@ -46,6 +99,7 @@
       <p class="faq-intro">Find quick answers to the most common questions students ask before booking.</p>
 
       <div class="faq-container">
+        <!-- FAQ items here remain unchanged -->
         <div class="faq-item">
           <button class="faq-question">What services do you provide as an academic coach?</button>
           <div class="faq-answer">
