--- a/services.html
+++ b/services.html
@@ -4,10 +4,110 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Our Services – Tutor Brian</title>
-  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <style>
+    /* ===== Navigation Styles ===== */
+    nav {
+      background: white;
+      border-bottom: 1px solid #ddd;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      user-select: none;
+      font-weight: 600;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    nav .nav-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0.75rem 2rem;
+      gap: 1rem;
+    }
+
+    nav .nav-brand {
+      font-weight: 700;
+      font-size: 1.25rem;
+      color: #4f46e5;
+      user-select: none;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 2.5rem;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #4f46e5;
+      font-size: 1rem;
+      transition: color 0.3s ease;
+      position: relative;
+      padding: 0.25rem 0;
+    }
+
+    nav a:hover,
+    nav a.active {
+      color: #3730a3;
+      text-decoration: underline;
+    }
+
+    /* Hamburger toggle button */
+    .nav-toggle {
+      display: none;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 30px;
+      height: 25px;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      padding: 0;
+      z-index: 101;
+    }
+
+    .nav-toggle span {
+      width: 30px;
+      height: 3px;
+      background: #4f46e5;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+      transform-origin: 1px;
+    }
+
+    /* Hamburger active animation */
+    .nav-toggle.active span:nth-child(1) {
+      transform: rotate(45deg);
+    }
+    .nav-toggle.active span:nth-child(2) {
+      opacity: 0;
+    }
+    .nav-toggle.active span:nth-child(3) {
+      transform: rotate(-45deg);
+    }
+
+    /* Theme toggle button */
+    .theme-toggle {
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      font-size: 1.3rem;
+      color: #4f46e5;
+      transition: color 0.3s ease;
+      user-select: none;
+    }
+    .theme-toggle:hover {
+      color: #3730a3;
+    }
+
+    /* ===== Your existing page styles ===== */
     body.services-page {
       font-family: 'Poppins', sans-serif;
       background: #f9fafb;
@@ -167,22 +267,84 @@
     html[data-theme="dark"] .service-card:hover .material-icon-circle {
       background: linear-gradient(135deg, #3b82f6, #2563eb);
     }
+
+    /* ===== Responsive Navigation ===== */
+    @media (max-width: 768px) {
+      nav .nav-container {
+        padding: 0.5rem 1rem;
+        gap: 0.5rem;
+      }
+
+      nav ul {
+        position: fixed;
+        top: 56px;
+        left: 0;
+        right: 0;
+        background: #f9fafb;
+        flex-direction: column;
+        gap: 0;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.4s ease;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+        border-radius: 0 0 12px 12px;
+        z-index: 99;
+      }
+
+      nav ul.active {
+        max-height: 400px;
+      }
+
+      nav ul li {
+        border-bottom: 1px solid #e0e0e0;
+      }
+      nav ul li:last-child {
+        border-bottom: none;
+      }
+      nav ul li a {
+        display: block;
+        padding: 1rem 1.5rem;
+        font-size: 1.2rem;
+        color: #4f46e5;
+      }
+      nav ul li a:hover,
+      nav ul li a.active {
+        background: #4338ca;
+        color: white;
+        border-radius: 0;
+      }
+
+      .nav-toggle {
+        display: flex;
+      }
+
+      .theme-toggle {
+        font-size: 1.5rem;
+        margin-left: 8px;
+      }
+    }
   </style>
 </head>
 
 <body class="services-page">
 
 <nav>
-  <div class="nav-brand">Tutor Brian</div>
-  <button class="menu-toggle" id="menu-toggle">☰</button>
-  <ul class="nav-links" id="nav-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="services.html" class="active">Services</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="faq.html">FAQ</a></li>
-  </ul>
-  <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
+  <div class="nav-container">
+    <div class="nav-brand">Tutor Brian</div>
+    <button class="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="primary-navigation">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+    <ul id="primary-navigation" role="menu">
+      <li role="none"><a href="index.html" role="menuitem">Home</a></li>
+      <li role="none"><a href="about.html" role="menuitem">About</a></li>
+      <li role="none"><a href="services.html" role="menuitem" class="active">Services</a></li>
+      <li role="none"><a href="contact.html" role="menuitem">Contact</a></li>
+      <li role="none"><a href="faq.html" role="menuitem">FAQ</a></li>
+    </ul>
+    <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle light/dark theme">🌓</button>
+  </div>
 </nav>
 
 <main>
@@ -259,10 +421,16 @@
 </footer>
 
 <script>
-  const toggle = document.getElementById("menu-toggle");
-  const navLinks = document.getElementById("nav-links");
-  toggle.addEventListener("click", () => {
-    navLinks.classList.toggle("active");
+  document.addEventListener("DOMContentLoaded", () => {
+    const navToggle = document.querySelector('.nav-toggle');
+    const navMenu = document.getElementById('primary-navigation');
+
+    navToggle.addEventListener('click', () => {
+      navToggle.classList.toggle('active');
+      navMenu.classList.toggle('active');
+      const expanded = navToggle.getAttribute('aria-expanded') === 'true' ? 'false' : 'true';
+      navToggle.setAttribute('aria-expanded', expanded);
+    });
   });
 
   function toggleTheme() {
