--- a/about.html
+++ b/about.html
@@ -4,31 +4,35 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us – Tutor Brian & Team</title>
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <style>
-    /* ===== Navigation Styles ===== */
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* === NAVIGATION ONLY (Scoped) === */
     nav {
       background: white;
       border-bottom: 1px solid #ddd;
       position: sticky;
       top: 0;
       z-index: 100;
-      user-select: none;
-      font-weight: 600;
       font-family: 'Poppins', sans-serif;
+      font-weight: 600;
       display: flex;
       align-items: center;
       justify-content: space-between;
       padding: 0.75rem 2rem;
-      gap: 1rem;
     }
 
-    nav .nav-brand {
-      font-weight: 700;
+    .nav-brand {
       font-size: 1.25rem;
+      font-weight: 700;
       color: #4f46e5;
-      user-select: none;
       flex-shrink: 0;
     }
 
@@ -45,8 +49,6 @@
       color: #4f46e5;
       font-size: 1rem;
       transition: color 0.3s ease;
-      position: relative;
-      padding: 0.25rem 0;
     }
 
     nav a:hover,
@@ -55,56 +57,81 @@
       text-decoration: underline;
     }
 
-    /* Hamburger toggle button */
     .nav-toggle {
       display: none;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: space-between;
       width: 30px;
-      height: 25px;
+      height: 24px;
       background: transparent;
       border: none;
       cursor: pointer;
       padding: 0;
-      z-index: 101;
     }
 
     .nav-toggle span {
-      width: 30px;
+      width: 100%;
       height: 3px;
       background: #4f46e5;
       border-radius: 2px;
       transition: all 0.3s ease;
-      transform-origin: 1px;
     }
 
-    /* Hamburger active animation */
     .nav-toggle.active span:nth-child(1) {
-      transform: rotate(45deg);
+      transform: rotate(45deg) translate(5px, 5px);
     }
+
     .nav-toggle.active span:nth-child(2) {
       opacity: 0;
     }
+
     .nav-toggle.active span:nth-child(3) {
-      transform: rotate(-45deg);
+      transform: rotate(-45deg) translate(6px, -6px);
     }
 
-    /* Theme toggle button */
     .theme-toggle {
       background: transparent;
       border: none;
       cursor: pointer;
       font-size: 1.3rem;
       color: #4f46e5;
-      transition: color 0.3s ease;
-      user-select: none;
-      flex-shrink: 0;
-    }
-    .theme-toggle:hover {
-      color: #3730a3;
+      margin-left: 1rem;
     }
 
-    /* ===== Scoped About Page Styles ===== */
+    @media (max-width: 768px) {
+      .nav-toggle {
+        display: flex;
+      }
+
+      nav ul {
+        position: absolute;
+        top: 60px;
+        left: 0;
+        right: 0;
+        background: #f9fafb;
+        flex-direction: column;
+        overflow: hidden;
+        max-height: 0;
+        transition: max-height 0.3s ease;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      }
+
+      nav ul.active {
+        max-height: 300px;
+      }
+
+      nav ul li {
+        border-bottom: 1px solid #ddd;
+      }
+
+      nav ul li a {
+        display: block;
+        padding: 1rem 1.5rem;
+        font-size: 1.1rem;
+      }
+    }
+
+    /* === ABOUT PAGE ONLY (Your Original Scoped Styles) === */
     .about-page .intro, 
     .about-page .values, 
     .about-page .stats, 
@@ -159,16 +186,11 @@
       border-radius: 10px;
       padding: 1.5rem 1rem;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-      transition: transform 0.2s ease-in-out;
-    }
-
-    .about-page .stat-card:hover {
-      transform: translateY(-5px);
     }
 
     .about-page .stat-card span.material-icons {
       font-size: 2rem;
-      color: var(--accent, #4a90e2);
+      color: #4f46e5;
       margin-bottom: 0.5rem;
     }
 
@@ -190,11 +212,6 @@
       color: #333;
     }
 
-    .about-page .quote blockquote {
-      margin: 0;
-      padding: 0;
-    }
-
     .about-page .quote cite {
       display: block;
       margin-top: 1rem;
@@ -207,81 +224,25 @@
         font-size: 1.5rem;
       }
     }
-
-    /* ===== Responsive Navigation ===== */
-    @media (max-width: 768px) {
-      nav {
-        padding: 0.5rem 1rem;
-      }
-
-      nav ul {
-        position: fixed;
-        top: 56px;
-        left: 0;
-        right: 0;
-        background: #f9fafb;
-        flex-direction: column;
-        gap: 0;
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.4s ease;
-        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-        border-radius: 0 0 12px 12px;
-        z-index: 99;
-        display: flex;
-      }
-
-      nav ul.active {
-        max-height: 400px;
-      }
-
-      nav ul li {
-        border-bottom: 1px solid #e0e0e0;
-      }
-      nav ul li:last-child {
-        border-bottom: none;
-      }
-      nav ul li a {
-        display: block;
-        padding: 1rem 1.5rem;
-        font-size: 1.2rem;
-        color: #4f46e5;
-      }
-      nav ul li a:hover,
-      nav ul li a.active {
-        background: #4338ca;
-        color: white;
-        border-radius: 0;
-      }
-
-      .nav-toggle {
-        display: flex;
-      }
-
-      .theme-toggle {
-        font-size: 1.5rem;
-        margin-left: 8px;
-      }
-    }
   </style>
 </head>
 <body class="about-page">
 
 <nav>
   <div class="nav-brand">Tutor Brian</div>
-  <button class="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="primary-navigation">
+  <button class="nav-toggle" aria-label="Menu">
     <span></span>
     <span></span>
     <span></span>
   </button>
-  <ul id="primary-navigation" role="menu">
-    <li role="none"><a href="index.html" role="menuitem">Home</a></li>
-    <li role="none"><a href="about.html" role="menuitem" class="active">About</a></li>
-    <li role="none"><a href="services.html" role="menuitem">Services</a></li>
-    <li role="none"><a href="contact.html" role="menuitem">Contact</a></li>
-    <li role="none"><a href="faq.html" role="menuitem">FAQ</a></li>
+  <ul id="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html" class="active">About</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="faq.html">FAQ</a></li>
   </ul>
-  <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle light/dark theme">🌓</button>
+  <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
 </nav>
 
 <main>
@@ -363,13 +324,10 @@
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const navToggle = document.querySelector('.nav-toggle');
-    const navMenu = document.getElementById('primary-navigation');
-
+    const navMenu = document.getElementById('nav-links');
     navToggle.addEventListener('click', () => {
       navToggle.classList.toggle('active');
       navMenu.classList.toggle('active');
-      const expanded = navToggle.getAttribute('aria-expanded') === 'true' ? 'false' : 'true';
-      navToggle.setAttribute('aria-expanded', expanded);
     });
   });
 
