--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
       }
     }
 
-    /* === ABOUT PAGE ONLY (Your Original Scoped Styles) === */
+    /* === ABOUT PAGE ONLY === */
     .about-page .intro, 
     .about-page .values, 
     .about-page .stats, 
@@ -226,6 +226,7 @@
     }
   </style>
 </head>
+
 <body class="about-page">
 
 <nav>
@@ -297,28 +298,8 @@
   </section>
 </main>
 
-<footer style="background:#f9f9f9; border-top:1px solid #ddd; padding:2rem 1.5rem;">
-  <div style="display:flex; flex-wrap:wrap; justify-content:space-between; gap:2rem; max-width:1200px; margin:0 auto;">
-    <div style="flex:1; min-width:260px;">
-      <h3 style="font-size:1.2rem; margin-bottom:0.75rem; color:#111;">Contact Us</h3>
-      <p style="color:#333; font-size:1rem; margin:0.5rem 0;">
-        <span class="material-icons" style="vertical-align:middle; margin-right:6px;">email</span>
-        <a href="mailto:bomfreelancelab@gmail.com" style="color:#4f46e5; text-decoration:none;">bomfreelancelab@gmail.com</a>
-      </p>
-      <p style="color:#333; font-size:1rem; margin:0.5rem 0;">
-        <span class="material-icons" style="vertical-align:middle; margin-right:6px;">phone</span>
-        <a href="tel:+12345678900" style="color:#4f46e5; text-decoration:none;">+1‑234‑567‑8900</a>
-      </p>
-    </div>
-    <div style="flex:1; min-width:260px; text-align:right;">
-      <h3 style="font-size:1.2rem; margin-bottom:0.75rem; color:#111;">Follow Me</h3>
-      <div style="display:flex; justify-content:flex-end; gap:12px; flex-wrap:wrap;">
-        <a href="#" title="LinkedIn" style="color:#4f46e5;"><span class="material-icons">linkedin</span></a>
-        <a href="#" title="Telegram" style="color:#4f46e5;"><span class="material-icons">send</span></a>
-      </div>
-    </div>
-  </div>
-  <p style="text-align:center; font-size:0.9rem; margin-top:2rem; color:#888;">&copy; 2025 Tutor Brian | Academic Coaching</p>
+<footer style="background:#f9fafb; border-top:1px solid #e5e7eb; padding:2rem 1.5rem;">
+  <p style="text-align:center; font-size:0.9rem; margin:0; color:#666;">&copy; 2025 Tutor Brian | Academic Coaching</p>
 </footer>
 
 <script>
@@ -336,5 +317,6 @@
     html.dataset.theme = html.dataset.theme === 'light' ? 'dark' : 'light';
   }
 </script>
+
 </body>
 </html>
