--- a/Index.html
+++ b/Index.html
@@ -82,28 +82,28 @@
     </section>
 
     <section class="testimonials" data-aos="fade-up">
-      <h2>What Students Say</h2>
-      <div class="carousel">
-        <div class="carousel-track">
-          <div class="testimonial-card">
-            <p>“I couldn’t have completed my master's thesis without Brian’s help. His insight and formatting support were invaluable.”</p>
-            <cite>– J. Morgan, MSc Graduate</cite>
-          </div>
-          <div class="testimonial-card">
-            <p>“Brian’s coaching helped me turn a failing paper into a distinction-grade submission. His knowledge of APA style is unmatched.”</p>
-            <cite>– A. Kibet, MBA Student</cite>
-          </div>
-          <div class="testimonial-card">
-            <p>“Thanks to Brian, I passed my dissertation defense with confidence. His step-by-step guidance made a huge difference.”</p>
-            <cite>– Sarah L., PhD Candidate</cite>
-          </div>
-        </div>
-        <div class="carousel-buttons">
-          <button class="carousel-btn prev">◀</button>
-          <button class="carousel-btn next">▶</button>
-        </div>
+  <h2>What Students Say</h2>
+  <div class="carousel">
+    <div class="carousel-track">
+      <div class="testimonial-card">
+        <p>“I couldn’t have completed my master's thesis without Brian’s help. His insight and formatting support were invaluable.”</p>
+        <cite>– J. Morgan, MSc Graduate</cite>
       </div>
-    </section>
+      <div class="testimonial-card">
+        <p>“Brian’s coaching helped me turn a failing paper into a distinction-grade submission. His knowledge of APA style is unmatched.”</p>
+        <cite>– A. Kibet, MBA Student</cite>
+      </div>
+      <div class="testimonial-card">
+        <p>“Thanks to Brian, I passed my dissertation defense with confidence. His step-by-step guidance made a huge difference.”</p>
+        <cite>– Sarah L., PhD Candidate</cite>
+      </div>
+    </div>
+    <div class="carousel-buttons">
+      <button class="carousel-btn prev" aria-label="Previous testimonial">◀</button>
+      <button class="carousel-btn next" aria-label="Next testimonial">▶</button>
+    </div>
+  </div>
+</section>
 
     <section class="connect" data-aos="fade-up">
       <h2>Get in Touch</h2>
