--- a/Index.html
+++ b/Index.html
@@ -3,20 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tutor Brian – Academic Coaching</title>
+  <title>Smart Essay Coach | Trusted Academic Help for Essays, Research & Assignments</title>
 
-  <meta name="description" content="Personalized academic coaching for students and researchers. Get expert help with formatting, writing, literature reviews, and thesis support.">
-  <meta property="og:title" content="Tutor Brian – Academic Coaching" />
-  <meta property="og:description" content="Need academic guidance? Book a 1-on-1 session with Tutor Brian for help in research, thesis writing, and formatting." />
-  <meta property="og:image" content="https://images.unsplash.com/photo-1573496529574-be85d6a60704?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" />
-  <meta property="og:url" content="https://yourdomain.com" />
+  <meta name="description" content="Struggling with academic writing? Smart Essay Coach offers expert tutoring, research guidance, and assignment help. Trusted by students in the US and UK.">
+  <meta name="keywords" content="essay help, academic writing, research coaching, assignment tutoring, online essay tutor, thesis help, Smart Essay Coach">
+  <meta name="author" content="Smart Essay Coach Team" />
+
+  <meta property="og:title" content="Smart Essay Coach | Academic Help You Can Trust" />
+  <meta property="og:description" content="Get personalized academic coaching and essay support from trusted experts. Ideal for college and graduate students." />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.smartessaycoach.com" />
+  <meta property="og:image" content="https://www.smartessaycoach.com/assets/og-preview.jpg" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Smart Essay Coach" />
+  <meta name="twitter:description" content="Essay help and academic tutoring trusted by students worldwide." />
+  <meta name="twitter:image" content="https://www.smartessaycoach.com/assets/twitter-preview.jpg" />
+
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3135/3135768.png" type="image/png" />
-
-  <!-- ✅ Use home.css for homepage only -->
   <link rel="stylesheet" href="home.css" />
-
-  <!-- Fonts & Icons -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
