--- a/Index.html
+++ b/Index.html
@@ -77,7 +77,7 @@
     <section class="cta-section" data-aos="fade-up">
       <h2>Let’s Elevate Your Academic Game</h2>
       <p>Whether you're stuck formatting citations or navigating a complex dissertation, I’ve got you covered.</p>
-      <a href="https://calendly.com/tutorjohntaylor/30min" target="_blank" rel="noopener" class="cta">📅 Schedule a Free Call →</a>
+      <a href="https://wa.me/717357947" target="_blank" rel="noopener" class="cta">💬 Try This Now on WhatsApp →</a>
     </section>
 
     <section class="how-it-works" data-aos="fade-up">
