--- a/Index.html
+++ b/Index.html
@@ -110,10 +110,11 @@
 </section>
 
     <section class="connect" data-aos="fade-up">
-      <h2>Get in Touch</h2>
-      <p><span class="material-icons">email</span> <a href="mailto:bomfreelancelab@gmail.com">bomfreelancelab@gmail.com</a></p>
-      <p><span class="material-icons">link</span> LinkedIn | WhatsApp | Telegram – coming soon</p>
-    </section>
+  <h2>Get in Touch</h2>
+  <p><span class="material-icons">email</span> <a href="mailto:bomfreelancelab@gmail.com">bomfreelancelab@gmail.com</a></p>
+  <p><span class="material-icons">chat</span> <a href="https://wa.me/717357947" target="_blank" rel="noopener">Chat on WhatsApp</a></p>
+  <p><span class="material-icons">send</span> <a href="https://t.me/smartessaycoach" target="_blank" rel="noopener">Join on Telegram</a></p>
+</section>
 
     <section class="schedule" data-aos="fade-up">
       <h2>📅 Book a Coaching Session</h2>
