--- a/Index.html
+++ b/Index.html
@@ -109,11 +109,27 @@
   </div>
 </section>
 
-    <section class="connect" data-aos="fade-up">
+   <section class="connect" data-aos="fade-up">
   <h2>Get in Touch</h2>
-  <p><span class="material-icons">email</span> <a href="mailto:bomfreelancelab@gmail.com">bomfreelancelab@gmail.com</a></p>
-  <p><span class="material-icons">chat</span> <a href="https://wa.me/717357947" target="_blank" rel="noopener">Chat on WhatsApp</a></p>
-  <p><span class="material-icons">send</span> <a href="https://t.me/smartessaycoach" target="_blank" rel="noopener">Join on Telegram</a></p>
+
+  <p>
+    <span class="material-icons">email</span>
+    <a href="mailto:bomfreelancelab@gmail.com">bomfreelancelab@gmail.com</a>
+  </p>
+
+  <p>
+    <span class="material-icons">chat</span>
+    <a href="https://wa.me/717357947" target="_blank" rel="noopener">
+      <strong>💬 Message me instantly on WhatsApp – I'm usually lightning fast ⚡</strong>
+    </a>
+  </p>
+
+  <p>
+    <span class="material-icons">send</span>
+    <a href="https://t.me/smartessaycoach" target="_blank" rel="noopener">
+      <strong>📢 Join our Telegram Channel for live tips, updates & academic wins!</strong>
+    </a>
+  </p>
 </section>
 
     <section class="schedule" data-aos="fade-up">
