--- a/services.html
+++ b/services.html
@@ -392,8 +392,8 @@
   </section>
 </main>
 
-<footer style="background:#f3f4f6; padding:2rem 1rem;">
-  <p style="text-align:center; font-size:0.95rem; color:#333; margin:0;">&copy; 2025 Tutor Brian | Academic Coaching</p>
+<footer style="background:#1e3a8a; padding:2rem 1rem; margin-top:5rem;">
+  <p style="text-align:center; font-size:0.95rem; color:#ffffff; margin:0;">&copy; 2025 Tutor Brian | Academic Coaching</p>
 </footer>
 
 <script>
