--- a/about.html
+++ b/about.html
@@ -248,10 +248,11 @@
 
 <main>
   <section class="intro">
-    <h1>Meet Tutor Brian & the BomFreelanceLab Team</h1>
-    <p>Since founding BomFreelanceLab three years ago, Brian and a dedicated team of full‑time researchers and academic tutors have provided relentless, top‑tier support to students across the US and UK.</p>
-    <p><strong>Brian</strong>, our CEO, has been a freelance researcher since 2019, delivering quality research guidance and academic writing support—full time—ever since.</p>
-  </section>
+  <h1>Why We Coach</h1>
+  <p>Our mission is simple: to help students gain clarity, confidence, and control in their academic journey.</p>
+  <p>Through personalized coaching and research support, we aim to demystify the academic process—empowering each student to write with purpose, defend with strength, and grow with integrity.</p>
+  <p>At BomFreelanceLab, academic success isn’t just about finishing a paper—it’s about building the mindset, structure, and skills to thrive long after the assignment is done.</p>
+</section>
 
   <section class="values">
     <h2>Our Core Values</h2>
